--- a/about.html
+++ b/about.html
@@ -33,80 +33,120 @@
             </div>
             <!-- Cards -->
             <div class="card">
-                <img src="" alt="">
-                <h3>Jadon Guzman</h3>
-                <span></span>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit incidunt
-                    minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo nihil
-                    blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.</p>
+                <img src="img\Daniel.jpg" alt="">
+                <div class="text-content">
+                    <h3>Daniel Detes</h3>
+                    <span>Web UI Developer</span>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
+                        incidunt
+                        minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo
+                        nihil
+                        blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.
+                    </p>
+                </div>
             </div>
             <div class="card">
-                <img src="" alt="">
-                <h3>Daniel Detes</h3>
-                <span></span>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit incidunt
-                    minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo nihil
-                    blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.</p>
+                <img src="img\Jadon.jpg" alt="">
+                <div class="text-content">
+                    <h3>Jadon Guzman</h3>
+                    <span>Web UI Developer</span>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
+                        incidunt
+                        minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo
+                        nihil
+                        blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.
+                    </p>
+                </div>
             </div>
             <div class="card">
-                <img src="" alt="">
-                <h3>Matthew Cebenka</h3>
-                <span></span>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit incidunt
-                    minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo nihil
-                    blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.</p>
+                <img src="img\Matthew.png" alt="">
+                <div class="text-content">
+                    <h3>Matthew Cebenka</h3>
+                    <span>Web React Developer</span>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
+                        incidunt
+                        minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo
+                        nihil
+                        blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.
+                    </p>
+                </div>
             </div>
             <div class="card">
-                <img src="" alt="">
-                <h3>Avaraham Candinov</h3>
-                <span></span>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit incidunt
-                    minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo nihil
-                    blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.</p>
+                <img src="img\Avraham.jpg" alt="">
+                <div class="text-content">
+                    <h3>Avaraham Candinov</h3>
+                    <span>Web React Developer</span>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
+                        incidunt
+                        minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo
+                        nihil
+                        blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.
+                    </p>
+                </div>
             </div>
             <div class="card">
-                <img src="" alt="">
-                <h3>John Donaldson Jr</h3>
-                <span></span>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit incidunt
-                    minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo nihil
-                    blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.</p>
+                <img src="img\Melody.jpg" alt="">
+                <div class="text-content">
+                    <h3>Melody Maki</h3>
+                    <span>Web React Developer</span>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
+                        incidunt
+                        minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo
+                        nihil
+                        blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.
+                    </p>
+                </div>
             </div>
             <div class="card">
-                <img src="" alt="">
-                <h3>Niranjan Kumar</h3>
-                <span></span>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit incidunt
-                    minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo nihil
-                    blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.</p>
+                <img src="img\John.jpg" alt="">
+                <div class="text-content">
+                    <h3>John Donaldson Jr</h3>
+                    <span>Backend Developer</span>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
+                        incidunt
+                        minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo
+                        nihil
+                        blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.
+                    </p>
+                </div>
             </div>
             <div class="card">
-                <img src="" alt="">
-                <h3>Jessie Ruiz</h3>
-                <span></span>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit incidunt
-                    minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo nihil
-                    blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.</p>
-            </div>
-            <div class="card">
-                <img src="" alt="">
-                <h3>Melody Maki</h3>
-                <span></span>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit incidunt
-                    minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo nihil
-                    blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.</p>
-            </div>
-            <div class="card">
-                <img src="" alt="">
+                <img src="img\Evan.jpg" alt="">
                 <h3>Evan Leduc</h3>
-                <span></span>
+                <span>Backend Developer</span>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit incidunt
                     minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo nihil
                     blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.</p>
+            </div>
+            <div class="card">
+                <img src="" alt="">
+                <div class="text-content">
+                    <h3>Niranjan Kumar</h3>
+                    <span>IOS Engineer</span>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
+                        incidunt
+                        minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo
+                        nihil
+                        blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img\Jessie.jpg" alt="">
+                <div class="text-content">
+                    <h3>Jessie Ruiz</h3>
+                    <span>IOS Engineer</span>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
+                        incidunt
+                        minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo
+                        nihil
+                        blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.
+                    </p>
+                </div>
             </div>
         </div>
     </main>
-
+    <!-- Footer -->
     <footer>
         <p>Copyright &copy; 2019</p>
     </footer>
