--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
         <div class="navbar">
             <img src="img\Logo2.png" alt="">
             <nav>
-                <a href="">Home</a>
-                <a href="">About Us</a>
-                <a href="">Sign Up/Sign In</a>
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Registration</a>
             </nav>
         </div>
     </header>
