--- a/about.html
+++ b/about.html
@@ -28,15 +28,104 @@
         <div class="container">
             <div class="heading">
                 <h1>Meet Our Team</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed numquam ipsum corporis dolor cupiditate
-                    doloremque!</p>
+                <p>The team of this great project!</p>
             </div>
             <!-- Cards -->
-            <div class="card">
-                <img src="img\Daniel.jpg" alt="">
-                <div class="text-content">
-                    <h3>Daniel Detes</h3>
-                    <span>Web UI Developer</span>
+            <div class="card-container">
+                <div class="card">
+                    <img src="img\Daniel.jpg" alt="">
+                    <div class="text-content">
+                        <h3>Daniel Detes</h3>
+                        <span class="special">Web UI Developer</span>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
+                            incidunt
+                            minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est
+                            illo
+                            nihil
+                            blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto
+                            doloremque.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img\Jadon.jpg" alt="">
+                    <div class="text-content">
+                        <h3>Jadon Guzman</h3>
+                        <span class="special">Web UI Developer</span>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
+                            incidunt
+                            minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est
+                            illo
+                            nihil
+                            blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto
+                            doloremque.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img\Matthew.png" alt="">
+                    <div class="text-content">
+                        <h3>Matthew Cebenka</h3>
+                        <span class="special">Web React Developer</span>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
+                            incidunt
+                            minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est
+                            illo
+                            nihil
+                            blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto
+                            doloremque.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img\Avraham.jpg" alt="">
+                    <div class="text-content">
+                        <h3>Avaraham Candinov</h3>
+                        <span class="special">Web React Developer</span>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
+                            incidunt
+                            minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est
+                            illo
+                            nihil
+                            blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto
+                            doloremque.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img\Melody.jpg" alt="">
+                    <div class="text-content">
+                        <h3>Melody Maki</h3>
+                        <span class="special">Web React Developer</span>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
+                            incidunt
+                            minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est
+                            illo
+                            nihil
+                            blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto
+                            doloremque.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img\John.jpg" alt="">
+                    <div class="text-content">
+                        <h3>John Donaldson Jr</h3>
+                        <span class="special">Backend Developer</span>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
+                            incidunt
+                            minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est
+                            illo
+                            nihil
+                            blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto
+                            doloremque.
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img\Evan.jpg" alt="">
+                    <h3>Evan Leduc</h3>
+                    <span class="special">Backend Developer</span>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
                         incidunt
                         minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo
@@ -44,104 +133,35 @@
                         blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.
                     </p>
                 </div>
-            </div>
-            <div class="card">
-                <img src="img\Jadon.jpg" alt="">
-                <div class="text-content">
-                    <h3>Jadon Guzman</h3>
-                    <span>Web UI Developer</span>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
-                        incidunt
-                        minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo
-                        nihil
-                        blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.
-                    </p>
+                <div class="card">
+                    <img src="img\Niranjan.jpg" alt="">
+                    <div class="text-content">
+                        <h3>Niranjan Kumar</h3>
+                        <span class="special">IOS Engineer</span>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
+                            incidunt
+                            minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est
+                            illo
+                            nihil
+                            blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto
+                            doloremque.
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="card">
-                <img src="img\Matthew.png" alt="">
-                <div class="text-content">
-                    <h3>Matthew Cebenka</h3>
-                    <span>Web React Developer</span>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
-                        incidunt
-                        minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo
-                        nihil
-                        blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.
-                    </p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="img\Avraham.jpg" alt="">
-                <div class="text-content">
-                    <h3>Avaraham Candinov</h3>
-                    <span>Web React Developer</span>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
-                        incidunt
-                        minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo
-                        nihil
-                        blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.
-                    </p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="img\Melody.jpg" alt="">
-                <div class="text-content">
-                    <h3>Melody Maki</h3>
-                    <span>Web React Developer</span>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
-                        incidunt
-                        minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo
-                        nihil
-                        blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.
-                    </p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="img\John.jpg" alt="">
-                <div class="text-content">
-                    <h3>John Donaldson Jr</h3>
-                    <span>Backend Developer</span>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
-                        incidunt
-                        minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo
-                        nihil
-                        blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.
-                    </p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="img\Evan.jpg" alt="">
-                <h3>Evan Leduc</h3>
-                <span>Backend Developer</span>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit incidunt
-                    minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo nihil
-                    blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.</p>
-            </div>
-            <div class="card">
-                <img src="" alt="">
-                <div class="text-content">
-                    <h3>Niranjan Kumar</h3>
-                    <span>IOS Engineer</span>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
-                        incidunt
-                        minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo
-                        nihil
-                        blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.
-                    </p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="img\Jessie.jpg" alt="">
-                <div class="text-content">
-                    <h3>Jessie Ruiz</h3>
-                    <span>IOS Engineer</span>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
-                        incidunt
-                        minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo
-                        nihil
-                        blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto doloremque.
-                    </p>
+                <div class="card">
+                    <img src="img\Jessie.jpg" alt="">
+                    <div class="text-content">
+                        <h3>Jessie Ruiz</h3>
+                        <span class="special">IOS Engineer</span>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
+                            incidunt
+                            minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est
+                            illo
+                            nihil
+                            blanditiis, tenetur ducimus numquam repudiandae, iusto quae. Esse magni architecto
+                            doloremque.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
