nav bar and header done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,26 @@
     </div>
 
 
-    <div>
+    <div class = main-container>
+        <header>
+            <h1>Ready For The Ultimate Fitness Experience?</h1>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, vero?</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing.
+            </p>
+            <button>Sign Up!</button>
+        </header>
+        <div class= middle-picture>
+            <img src="" alt="">
+        </div>
+        <section class= middle-content>
+            <h2>Sign up online.</h2>
+            <h2>Join Classes.</h2>
+            <h2>Save Time</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugiat, quam sunt in laudantium harum delectus dignissimos a esse maiores?</p>
+            <button>Learn More</button>
+        </section>
+
+        
 
     </div>
 </body>
