middle and bottom html done

--- a/index.html
+++ b/index.html
@@ -38,9 +38,36 @@
             <h2>Save Time</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugiat, quam sunt in laudantium harum delectus dignissimos a esse maiores?</p>
             <button>Learn More</button>
-        </section>
+        </section> 
 
-        
+        <section class= bottom-content>
+
+          <div class= main-bottom-text>
+                <h2>Say hello to fitness at your fingertips</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, dolorem!</p>
+          </div>
+          <div class= bottom-features>
+                <div class= left-img>
+                    <img src="" alt="">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class= middle-img> 
+                    <img src="" alt="">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class= right-img>
+                    <img src="" alt="">
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+
+                <button>Sign up</button>
+
+            </div>
+
+            <footer>
+                
+            </footer>
+        </section>
 
     </div>
 </body>
