--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             <nav>
                 <a href="#">Home</a>
                 <a href="#">About</a>
-                <a href="#">Registration</a>
+                <a href="#">Sign Up</a>
             </nav>
         </div>
     </header>
@@ -168,7 +168,7 @@
     </main>
     <!-- Footer -->
     <footer>
-        <p>Copyright &copy; 2019</p>
+        <p>&copy; 2019 Anywhere Fitness</p>
     </footer>
 </body>
 
