--- a/team.html
+++ b/team.html
@@ -18,6 +18,8 @@
             <nav>
                 <a href="#">Home</a>
                 <a href="#">About</a>
+                <a href="">Our Team</a>
+                <a href="">Contact</a>
                 <a href="#">Sign Up</a>
             </nav>
         </div>
@@ -30,13 +32,14 @@
                 <h1>Meet Our Team</h1>
                 <p>The team of this great project!</p>
             </div>
+
             <!-- Cards -->
             <div class="card-container">
                 <div class="card">
                     <img src="img\Daniel.jpg" alt="">
                     <div class="text-content">
                         <h3>Daniel Detes</h3>
-                        <span class="special">Web UI Developer</span>
+                        <span class="special"><strong>Web UI Developer</strong></span>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
                             incidunt
                             minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est
@@ -51,7 +54,7 @@
                     <img src="img\Jadon.jpg" alt="">
                     <div class="text-content">
                         <h3>Jadon Guzman</h3>
-                        <span class="special">Web UI Developer</span>
+                        <span class="special"><strong>Web UI Developer</strong></span>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
                             incidunt
                             minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est
@@ -66,7 +69,7 @@
                     <img src="img\Matthew.png" alt="">
                     <div class="text-content">
                         <h3>Matthew Cebenka</h3>
-                        <span class="special">Web React Developer</span>
+                        <span class="special"><strong>Web React Developer</strong></span>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
                             incidunt
                             minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est
@@ -81,7 +84,7 @@
                     <img src="img\Avraham.jpg" alt="">
                     <div class="text-content">
                         <h3>Avaraham Candinov</h3>
-                        <span class="special">Web React Developer</span>
+                        <span class="special"><strong>Web React Developer</strong></span>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
                             incidunt
                             minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est
@@ -96,7 +99,7 @@
                     <img src="img\Melody.jpg" alt="">
                     <div class="text-content">
                         <h3>Melody Maki</h3>
-                        <span class="special">Web React Developer</span>
+                        <span class="special"><strong>Web React Developer</strong></span>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
                             incidunt
                             minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est
@@ -111,7 +114,7 @@
                     <img src="img\John.jpg" alt="">
                     <div class="text-content">
                         <h3>John Donaldson Jr</h3>
-                        <span class="special">Backend Developer</span>
+                        <span class="special"><strong>Backend Developer</strong></span>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
                             incidunt
                             minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est
@@ -125,7 +128,7 @@
                 <div class="card">
                     <img src="img\Evan.jpg" alt="">
                     <h3>Evan Leduc</h3>
-                    <span class="special">Backend Developer</span>
+                    <span class="special"><strong>Backend Developer</strong></span>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
                         incidunt
                         minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est illo
@@ -137,7 +140,7 @@
                     <img src="img\Niranjan.jpg" alt="">
                     <div class="text-content">
                         <h3>Niranjan Kumar</h3>
-                        <span class="special">IOS Engineer</span>
+                        <span class="special"><strong>IOS Engineer</strong></span>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
                             incidunt
                             minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est
@@ -152,7 +155,7 @@
                     <img src="img\Jessie.jpg" alt="">
                     <div class="text-content">
                         <h3>Jessie Ruiz</h3>
-                        <span class="special">IOS Engineer</span>
+                        <span class="special"><strong>IOS Engineer</strong></span>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime autem vitae hic debitis sit
                             incidunt
                             minus sequi facere fugit eaque error molestiae accusantium dolores ratione, provident est
@@ -166,6 +169,7 @@
             </div>
         </div>
     </main>
+
     <!-- Footer -->
     <footer>
         <p>&copy; 2019 Anywhere Fitness</p>
