more styling added

--- a/index.html
+++ b/index.html
@@ -35,14 +35,21 @@
             </header>
    </div>
         <div class= middle-picture>
-            <img src="" alt="">
+                <img src="/img/workoutclass.jpg" alt="">
         </div>
         <section class= middle-content>
-            <h2>Sign up online.</h2>
-            <h2>Join Classes.</h2>
-            <h2>Save Time</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugiat, quam sunt in laudantium harum delectus dignissimos a esse maiores?</p>
-            <button>Learn More</button>
+            <div class=mid-left>
+                <h2>Sign up online.</h2>
+                <h2>Join Classes.</h2>
+                <h2>Save Time.</h2>
+            </div>
+            <div class= mid-right>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum fugiat, quam sunt in laudantium harum delectus dignissimos a esse maiores?</p>
+                <p>t consectetur adipisicing elit. Ipsum fugiat, quam sunt in laudantium harum delectus quam sunt in laudantium harum </p>
+                <p>, quam sunt in laudantium harum delectus quam sunt in laudantium harum</p>
+                <button>Learn More</button>
+            </div>
+            
         </section> 
 
         <section class= bottom-content>
