--- a/team.html
+++ b/team.html
@@ -17,9 +17,9 @@
             <img src="img\Logo2.png" alt="">
             <nav>
                 <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="">Our Team</a>
-                <a href="">Contact</a>
+                <a href="about.html">About</a>
+                <a href="#">Our Team</a>
+                <a href="#">Contact</a>
                 <a href="#">Sign Up</a>
             </nav>
         </div>
