--- a/index.html
+++ b/index.html
@@ -54,9 +54,15 @@
 
         <section class= bottom-content>
 
+            
           <div class= main-bottom-text>
-                <h2>Say hello to fitness at your fingertips</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, dolorem!</p>
+                <div class="bottom-picture">
+                        <img src="/img/hiclipart.com.png" alt="">
+                </div>
+                <div class= "bottom-text">
+                    <h2>Say hello to fitness at your fingertips</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, dolorem!</p>
+                </div>
           </div>
           <div class= bottom-features>
                 <div class= left-img>
