--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
                 <ul class="nav-links">
                   <li>  <img class=logo src="/img/Logo2.png" alt=""></li>
                    <li class="nav-item"><a href="#">Home</a></li>
-                   <li class="nav-item"><a href="#">About Us</a></li>
+                   <li class="nav-item"><a href="about.html">About Us</a></li>
                    <li class="nav-item"><a href="contact.html">Contact Us</a></li>
+                   <li class="nav-item"><a href="team.html">Our Team</a></li>
                   
                 </ul>
                       
