--- a/about.html
+++ b/about.html
@@ -16,11 +16,10 @@
         <div class="navbar">
             <img src="img\Logo2.png" alt="">
             <nav>
-                <a href="#">Home</a>
-                <a href="#">About</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
                 <a href="team.html">Our Team</a>
-                <a href="#">Contact</a>
-                <a href="#">Sign Up</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </div>
     </header>
