--- a/contact.html
+++ b/contact.html
@@ -9,19 +9,15 @@
 </head>
 <body>
     <header>
-            <div class= contact-container>
-                    <div class= "nav-div">
-                    
-                        <nav class="navbar">
-                            <ul class="nav-links">
-                              <li>  <img class=logo src="/img/Logo2.png" alt=""></li>
-                               <li class="nav-item"><a href="index.html">Home</a></li>
-                               <li class="nav-item"><a href="#">About Us</a></li>
-                               <li class="nav-item"><a href="#">Contact Us</a></li>
-                            </ul>
-                                  
-                        </nav>
-                    </div>
+            <div class="navbar2">
+                    <img src="img\Logo2.png" alt="">
+                    <nav>
+                        <a href="index.html">Home</a>
+                        <a href="about.html">About</a>
+                        <a href="team.html">Our Team</a>
+                        <a href="contact.html">Contact</a>
+                    </nav>
+                </div>
     </header>
    
     <div class=supercontact>
